--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,16 @@
             }
         },
         {
+            "label": "repetition test",
+            "type": "shell",
+            "command": "zig build --release=safe reptest",
+            "group": "build",
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared"
+            }
+        },
+        {
             "label": "tests",
             "type": "shell",
             "command": "zig build test",
