--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,6 +32,16 @@
             }
         },
         {
+            "label": "pagefault testing",
+            "type": "shell",
+            "command": "zig build pagefault > ${workspaceFolder}/pagefaults.csv",
+            "group": "build",
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared"
+            }
+        },
+        {
             "label": "tests",
             "type": "shell",
             "command": "zig build test",
