--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -34,7 +34,7 @@
         {
             "label": "sandbox",
             "type": "shell",
-            "command": "zig build sandbox --release=safe -- read-width",
+            "command": "zig build sandbox --release=safe -- cache-test",
             "group": "build",
             "presentation": {
                 "reveal": "always",
